--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Extracts the value from given array by given path (with delimiter). as default delimiter it uses dot(.)",
     "type": "library",
     "license": "BSD-3-Clause",
+    "version": "1.0",
     "authors": [
         {
             "name": "Jan F Kowalski",
@@ -20,9 +21,8 @@
             "config-provider": "ArrayDigger\\ConfigProvider"
         },
         "branch-alias": {
-          "stable": "master",
-          "dev-master": "master",
-          "dev-develop": "master"
+          "dev-master": "1.x-dev",
+          "dev-develop": "1.x-dev"
         }
     }
 }
