--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
             "config-provider": "ArrayDigger\\ConfigProvider"
         },
         "branch-alias": {
-          "stable": "1.x",
-          "dev-master": "1.x",
-          "dev-develop": "1.x"
+          "stable": "1.x-dev",
+          "dev-master": "1.x-dev",
+          "dev-develop": "1.x-dev"
         }
     }
 }
