--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^5.5"
+        "php": "^5.5 || ^7.0"
     },
     "psr-4": {
         "ArrayDigger\\": "src/"
