--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^5.5 || ^7.0"
     },
     "psr-4": {
-        "ArrayDigger\\": "src/"
+        "Secalith\\ArrayDigger\\": "src/"
     },
     "extra": {
         "zf": {
