--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "extra": {
         "zf": {
-            "config-provider": "ArrayDigger\\ConfigProvider"
+            "config-provider": "Secalith\\ArrayDigger\\ConfigProvider"
         },
         "branch-alias": {
           "stable": "1.x-dev",
